--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -11,9 +11,8 @@
 </head>
 <body>
 
-	<h1>Here is my first change!!!</h1>
-    <h1> new header</h1>
-    <h1> new header</h1>
+	<h1>Welcome to the 1st sample of Twitter Bootstraps</h1>
+    
 	
 </body>
 </html>
